made some more config changes and added new shiny app

--- a/visualization/shiny_apps/shiny-server.conf
+++ b/visualization/shiny_apps/shiny-server.conf
@@ -5,52 +5,26 @@ run_as shiny;
 server {
   listen 3838;
 
-    location /users {
-      run_as :HOME_USER:;
-      user_dirs;
-    }
+  # Define a location at the base URL
+  location / {
 
-    # Define a location at the base URL
-    location /shiny-apps {
-        run_as shiny;
+    # Host the directory of Shiny Apps stored in this directory
+    site_dir /srv/shiny-server;
 
-        # Host the directory of Shiny Apps stored in this directory
-        site_dir /opt/shiny-server/shiny-apps;
+    # Log all Shiny output to files in this directory
+    log_dir /var/log/shiny-server;
 
-        # Log all Shiny output to files in this directory
-        log_dir /var/log/shiny-server/shiny-apps;
+    # When a user visits the base URL rather than a particular application,
+    # an index of the applications available in this directory will be shown.
+    directory_index on;
+  }
 
-        # When a user visits the base URL rather than a particular application,
-        # an index of the applications available in this directory will be shown.
-        directory_index on;
-    };
+  location /ahp {
+    site_dir /srv/shiny-server/ahp;
 
-    # Define a location at the base URL
-    location /ahp {
+    log_dir /var/log/shiny-server;
 
-     # Host the directory of Shiny Apps stored in this directory
-     app_dir /opt/shiny-server/shiny-apps/ahp;
-
-     # Log all Shiny output to files in this directory
-     log_dir /var/log/shiny-server/ahp;
-
-     # When a user visits the base URL rather than a particular application,
-     # an index of the applications available in this directory will be shown.
-     directory_index off;
- };
-
- # Define a location at the base URL - JUST A placeholder right now
- location /app2 {
-
-     # Host the directory of Shiny Apps stored in this directory
-     app_dir /opt/shiny-server/shiny-apps/app2;
-
-     # Log all Shiny output to files in this directory
-     log_dir /var/log/shiny-server/app2;
-
-        # When a user visits the base URL rather than a particular application,
-        # an index of the applications available in this directory will be shown.
-        directory_index off;
-    };
+    directory_index on;
+  }
 
 }
