made more config updates

--- a/visualization/shiny_apps/aws_setup/shiny-server.conf
+++ b/visualization/shiny_apps/aws_setup/shiny-server.conf
@@ -27,4 +27,12 @@ server {
     directory_index on;
   }
 
+  location /countdown {
+    site_dir /srv/shiny-server/countdown;
+
+    log_dir /var/log/shiny-server;
+
+    directory_index on;
+  }
+
 }
